--- a/index.html
+++ b/index.html
@@ -1,12 +1,172 @@
 <!DOCTYPE html>
 <html lang="ru">
+
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Седона</title>
   </head>
-  <body>
 
-    <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">HTML и CSS. Профессиональная вёрстка сайтов</a>».</p>
+  <body>
+    <header class="page-header">
+      <nav class="navigation">
+        <ul class="navigation-list">
+          <li>
+            <img class="logo" src="" alt="Логотип Седона"> <!--Не понял, правильно ли-->
+          </li>
+          <li class="navigation-item">
+            <a class="navigation-link" href="main.html">Главная</a>
+          </li>
+          <li class="navigation-item">
+            <a class="navigation-link" href="sedona.html">О Седоне</a>
+          </li>
+          <li class="navigation-item">
+            <a class="navigation-link" href="hotels.html">Гостиницы</a>
+          </li>
+
+        </ul>
+
+        <ul class="navigation-list navigation-user">
+          <li class="navigation-item">
+            <a class="navigation-link" href="#">
+              <span class="visually-hidden">Поиск</span>
+
+            </a>
+          </li>
+          <li class="navigation-item">
+            <a class="navigation-link" href="#">
+              <span class="visually-hidden">Избранное</span>
+            </a>
+          </li>
+          <li class="navigation-item">
+            <a class="button button-all" href="#">Хочу сюда!</a>
+          </li>
+
+        </ul>
+      </nav>
+
+
+
+
+
+    </header>
+    <main class="main-index">
+      <h1 class="visually-hidden">Седона</h1>
+      <ul class="welcome">
+        <li class="welcom-item">
+          <img class="img-welcome" src="" alt="Приветствие в Седону"> <!--Правильно ли написал alt?-->
+          <img class="img-welcome" src="" alt="to the gargeus"> <!--А можно перевод? ))-->
+
+        </li>
+        <li class="welcome-item">
+          <img class="img-sedona" src="" alt="Седона, самый крутой каньон"> <!--Краткость сестра таланта!-->
+
+
+        </li>
+      </ul>
+      <img class="divider" src="" alt="Делает картинку красивой"> <!--Поправьте если ошибаюсь-->
+
+      <section class="introduction">
+        <h2 class="introduction-title">Седона — небольшой городок в Аризоне,
+          заслуживающий большего!</h2>
+
+        <p class="introduction-description">Рассмотрим причины, по которым Седона круче, чем Гранд-Каньон!</p>
+      </section>
+
+      <section class="advantages"> <!--Затруднительное положение. Я думаю что можно сделать через таблицу но сомнительно немного та и навыков не хватает так думаю. Сделаем через ul -->
+        <ul class="advantages-list">
+          <li class="advantages-item">
+            <h3 class="advantages-title">Настоящий городок</h3>
+            <br>
+            <p class="advantages-description">Седона — не аттракцион для туристов, там течёт своя жизнь</p>
+          </li>
+          <li class="advantages-item"><img class="advantages-img" src="" alt="Красивый вид на балкон"></li>
+        </ul>
+
+
+        <ul class="advantages">
+          <li class="advantages-item">
+            <h3 class="advantages-title">Небольшая площадь</h3>
+            <br>
+            <p class="advantages-description">Все достопримечательности находятся очень близко</p>
+
+
+          </li>
+          <li class="advantages-item">
+            <h3 class="advantages-title">Красивая дорога</h3>
+            <br>
+            <p class="advantages-description">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
+
+          </li>
+          <li class="advantages-item">
+            <h3 class="advantages-title">Мало туристов</h3>
+            <br>
+            <p class="advantages-description">Большинство едет в Гранд Каньон и толпится там</p>
+
+          </li>
+
+        </ul>
+        <ul class="advantages">
+          <li class="advantages-item">
+            <img class="advantages-img" src="" alt="Красивые вид на скалы и леса">
+
+          </li>
+          <li class="advantages-item">
+            <h3 class="advantages-title">Там есть мост дьявола</h3>
+            <br>
+            <p class="advantages-description">Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
+
+          </li>
+
+        </ul>
+        <ul class="advantages">
+          <li class="advantages-item">
+            <img class="advantages-img" src="" alt="Нарисован домик">
+            <h3 class="advantages-title">Жильё</h3>
+            <br>
+            <p class="advantages-description">Рекомендуем пожить в настоящем мотеле,
+              всё как в кино!</p>
+
+          </li>
+          <li class="advantages-item">
+            <img class="advantages-img" src="" alt="Нарисован бургер">
+            <h3 class="advantages-title">Еда</h3>
+            <br>
+            <p class="advantages-description">Всегда заказывайте
+              топовый фирменный бургер, вы не разочаруетесь!</p>
+
+          </li>
+          <li class="advantages-item">
+            <img class="advantages-img" src="" alt="Нарисован подарок">
+            <h3 class="advantages-title">Сувениры</h3>
+            <br>
+            <p class="advantages-description">Не только китайского,
+              но и настоящего местного производства!</p>
+
+
+          </li>
+
+        </ul>
+
+
+      </section>
+
+
+
+
+
+
+
+
+    </main>
+
+
+    <footer class="page-footer">
+
+
+    </footer>
+
+
 
   </body>
+
 </html>
