Первая страница завершена

--- a/index.html
+++ b/index.html
@@ -148,6 +148,39 @@
         </ul>
 
 
+      </section >
+      <section class="interesting">
+        <ul class="interest">
+          <li class="interest-item">
+            <h3 class="interes-title">Заинтересовались?</h3>
+            <p class="interes-description">Укажите предполагаемые даты поездки,и мы покажем вам лучшие предложения гостиниц в Седоне</p>
+            <a class="button-search button-all" href="#">Поиск гостиницы в седоне</a>
+          </li>
+        </ul>
+      </section>
+
+      <section class="dispatch">
+        <ul class="subscrible">
+          <li class="subscrible-item">
+            <h3 class="subscrible-title">Подпишитесь на рассылку</h3>
+            <p class="subscrible-description">Только полезная информация и никакого спама, честное бойскаутское!</p>
+
+
+            <form class="dispatch-form" action="https://echo.htmlacademy.ru/" method="post">
+              <label for="dispatch-email">Email</label>
+              <input class="field"  placeholder="email@example.com" type="email" name="dispatch-email" id="dispatch-email" required>
+              <button class="button dispatch-button" type="submit">
+                <span class="visually-hidden">Отправить</span>
+              </button>
+            </form>
+
+          </li>
+
+        </ul>
+
+
+
+
       </section>
 
 
@@ -161,6 +194,42 @@
 
 
     <footer class="page-footer">
+      <section class="footer-social">
+        <h2 class="visually-hidden">Социальные контакты</h2>
+
+        <ul class="footer-social-list">
+          <li class="footer-social-item">
+            <a class="button" href="https://vk.com/htmlacademy">
+              <span class="visually-hidden">Вконтакте</span>
+            </a>
+          </li>
+          <li class="footer-social-item">
+            <a class="button" href="https://t.me/htmlacademy">
+              <span class="visually-hidden">Телеграм</span>
+            </a>
+          </li>
+          <li class="footer-social-item">
+            <a class="button" href="https://www.youtube.com/user/htmlacademyru">
+              <span class="visually-hidden">Ютуб</span>
+            </a>
+          </li>
+        </ul>
+
+      </section>
+
+      <section class="footer-telephone">
+        <h2 class="visually-hidden">Телефон</h2>
+        <address class="footer-contacts-address">
+          <a class="footer-contacts-address" href="tel:+78128121212">+7 (812) 812-12-12</a>
+        </address>
+
+      </section>
+
+      <section class="footer-logo">
+        <h2 class="visually-hidden">Логотип htmlacademy</h2>
+        <a class="footer-logo-html" href="https://htmlacademy.ru/"> <img src="" alt="Логотип html academy который переносит на главную"></a>
+
+      </section>
 
 
     </footer>
