--- a/Test-practic/test-main-cedona.html
+++ b/Test-practic/test-main-cedona.html
@@ -57,5 +57,124 @@
 
     </header>
 
+    <main class="main-index">  <!--Создаём основное содержимое страницы-->
+
+      <h1 class="visually-hidden">Город Седона</h1>
+      <section class="hero">
+        <section class="hero">
+          <img class="hero-logo-text" src="" alt=" Логотип сайта" width="458" height="352"> <!--Нужно сгруппировать 3 вектро в svg -->
+          <img class="divider" src="" alt="Делает картинку красивой!" width="1200" height="57"> <!--Идёт разделение -->
+          <h2>Седона-небольшой городок в Аризоне,<br>
+            заслуживающий большего!</h2>
+          <p>Рассмотрим причины, по которым Седона круче, чем Гранд-Каньон!</p>
+
+      </section>
+
+
+
+
+
+      <section class="advantages"> <!--Создаём секцию преимуществ Седоны-->
+        <h2 class="visually-hidden">Преимущества</h2> <!--Создаём оглавление чтобы повысить качество читаемости-->
+
+        <ul class="advantages-list"> <!--Создаём список преимуществ-->
+          <li class="advantages-item">
+            <h3 class="advantages-title">Настоящий городок</h3>
+            <br> <!--Черта. В css просто возьмём br. Считаю что не нужно создавать специальный класс.-->
+            <p class="advantages-description">Седона — не аттракцион для туристов, там течёт своя жизнь</p>
+
+          </li> <!--Создаём список преимуществ-->
+          <li class="advantages-item">
+            <img class="advantages-photo" src="" alt="Красивая картинка здания с листвой" width="800" height="384">
+          </li> <!--Создаём картинку преимуществ-->
+
+        </ul>
+
+        <ul class="advantages">
+          <li class="advantages-item">
+            <h3 class="advantages-title">Небольшая площадь</h3>
+            <br> <!--Черта. В css просто возьмём br. Считаю что не нужно создавать специальный класс.-->
+            <p class="advantages-description">Все достопримечательности находятся очень близко</p>
+
+          </li> <!--Создаём список преимуществ-->
+
+          <li class="advantages-item">
+            <h3 class="advantages-title">Красивая
+              дорога</h3>
+            <br> <!--Черта. В css просто возьмём br. Считаю что не нужно создавать специальный класс.-->
+            <p class="advantages-description">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
+
+          </li> <!--Создаём список преимуществ-->
+
+          <li class="advantages-item">
+            <h3 class="advantages-title">Мало
+              туристов</h3>
+            <br> <!--Черта. В css просто возьмём br. Считаю что не нужно создавать специальный класс.-->
+            <p class="advantages-description">Большинство едет в Гранд Каньон и толпится там</p>
+
+          </li> <!--Создаём список преимуществ-->
+
+        </ul>
+
+
+
+        <ul class="advantages-list"> <!--Создаём список преимуществ-->
+
+          <li class="advantages-item">
+            <img class="advantages-photo" src="" alt="Красивая картинка гор и дальних деревьев" width="800" height="384">
+          </li> <!--Создаём картинку преимуществ-->
+
+          <li class="advantages-item">
+            <h3 class="advantages-title">Там есть
+              мост дьявола</h3>
+            <br> <!--Черта. В css просто возьмём br. Считаю что не нужно создавать специальный класс.-->
+            <p class="advantages-description">Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
+
+          </li> <!--Создаём список преимуществ-->
+
+        </ul>
+
+
+
+        <section class="recome"> <!--recome - рекомендации -->
+
+          <ul class="recome">
+            <li class="recome-item">
+              <img class="recome-logo" src="" alt="Домик">
+              <h3 class="recome-title">Жильё</h3>
+
+              <p class="recome-description">Рекомендуем пожить в настоящем мотеле,
+                всё как в кино!</p>
+
+            </li> <!--Создаём список преимуществ-->
+
+            <li class="recome-item">
+              <img class="recome-logo" src="" alt="Бургер">
+              <h3 class="recome-title">Еда</h3>
+
+              <p class="recome-description">Всегда заказывайте
+                топовый фирменный бургер, вы не разочаруетесь!</p>
+
+            </li> <!--Создаём список преимуществ-->
+
+            <li class="recome-item">
+              <img class="recome-logo" src="" alt="Подарок">
+              <h3 class="recome-title">Сувениры</h3>
+
+              <p class="recome-description">Не только китайского,
+                но и настоящего местного производства!</p>
+
+            </li> <!--Создаём список преимуществ-->
+
+          </ul>
+
+        </section>
+
+
+
+
+      </section>
+    </main>
+
   </body>
 </html>
