Детальный разбор - Секция поиска гостиницы

--- a/Test-practic/test-main-cedona.html
+++ b/Test-practic/test-main-cedona.html
@@ -118,6 +118,7 @@
 
 
 
+
         <ul class="advantages-list"> <!--Создаём список преимуществ-->
 
           <li class="advantages-item">
@@ -134,46 +135,71 @@
 
         </ul>
 
+      </section>
 
 
-        <section class="recome"> <!--recome - рекомендации -->
+      <section class="recome"> <!--recome - рекомендации -->
 
-          <ul class="recome">
-            <li class="recome-item">
-              <img class="recome-logo" src="" alt="Домик">
-              <h3 class="recome-title">Жильё</h3>
+        <ul class="recome-list">
+          <li class="recome-item">
+            <img class="recome-logo" src="" alt="Домик">
+            <h3 class="recome-title">Жильё</h3>
 
-              <p class="recome-description">Рекомендуем пожить в настоящем мотеле,
-                всё как в кино!</p>
+            <p class="recome-description">Рекомендуем пожить в настоящем мотеле,
+              всё как в кино!</p>
 
-            </li> <!--Создаём список преимуществ-->
+          </li> <!--Создаём список преимуществ-->
 
-            <li class="recome-item">
-              <img class="recome-logo" src="" alt="Бургер">
-              <h3 class="recome-title">Еда</h3>
+          <li class="recome-item">
+            <img class="recome-logo" src="" alt="Бургер">
+            <h3 class="recome-title">Еда</h3>
 
-              <p class="recome-description">Всегда заказывайте
-                топовый фирменный бургер, вы не разочаруетесь!</p>
+            <p class="recome-description">Всегда заказывайте
+              топовый фирменный бургер, вы не разочаруетесь!</p>
 
-            </li> <!--Создаём список преимуществ-->
+          </li> <!--Создаём список преимуществ-->
 
-            <li class="recome-item">
-              <img class="recome-logo" src="" alt="Подарок">
-              <h3 class="recome-title">Сувениры</h3>
+          <li class="recome-item">
+            <img class="recome-logo" src="" alt="Подарок">
+            <h3 class="recome-title">Сувениры</h3>
 
-              <p class="recome-description">Не только китайского,
-                но и настоящего местного производства!</p>
+            <p class="recome-description">Не только китайского,
+              но и настоящего местного производства!</p>
 
-            </li> <!--Создаём список преимуществ-->
+          </li> <!--Создаём список преимуществ-->
 
-          </ul>
-
-        </section>
-
-
-
+        </ul>
 
       </section>
+
+
+
+      <section class="search-hostels"> <!--Создаём секцию по поиску гостиницы заинтересованным лицам-->
+
+
+        <ul class="search-hostels-list"> <!--Создаём список-->
+          <li class="search-hostels-item">
+            <h3 class="search-hostels-title">Заинтересовались?</h3>
+            <p class="search-hostels-discription">Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в Седоне</p>
+            <a class="button-search-hostels button-all" href="#">ПОИСК ГОСТИНИЦЫ В седоне</a> <!--Видимая кнопка для перехода по ссылка в поиск гостиницы-->
+
+          </li>
+
+
+        </ul>
+
+      </section>
+
+
+
+
+
+
+
+
+
+
+
     </main>
 
   </body>
