--- a/index.html
+++ b/index.html
@@ -1,241 +1,248 @@
 <!DOCTYPE html>
 <html lang="ru">
-
   <head>
     <meta charset="utf-8">
-    <title>HTML Academy: Седона</title>
+    <title>Седона</title> <!--Именование страницы-->
   </head>
 
   <body>
-    <header class="page-header">
+
+    <header class="page-header"> <!--Именуем шапку-->
       <nav class="navigation">
-        <ul class="navigation-list">
-          <li>
-            <img class="logo" src="" alt="Логотип Седона"> <!--Не понял, правильно ли-->
+        <ul class="navigation-list"> <!--Создаём навигацию и именуем её-->
+          <li class="navigation-item"> <!--Создаём навигационный предмет - блок-->
+            <a class="navigation-link navigation-logo" href="#"> <img src="#" alt="Логотип Сидоны"></a> <!--Создаём мини блок для логотипа и чтобы клиент мог по инерции переходить на главную-->
+
           </li>
-          <li class="navigation-item">
-            <a class="navigation-link" href="main.html">Главная</a>
+          <li class="navigation-item"> <!--Создаём мини блоки чтобы клиент понимал функционал-->
+            <a class="navigation-link" href="home.html">Главная</a>
+
           </li>
-          <li class="navigation-item">
-            <a class="navigation-link" href="sedona.html">О Седоне</a>
+          <li class="navigation-item"> <!--Создаём мини блоки чтобы клиент понимал функционал-->
+            <a class="navigation-link" href="about.html">О Седоне</a>
+
           </li>
-          <li class="navigation-item">
+          <li class="navigation-item"> <!--Создаём мини блоки чтобы клиент понимал функционал-->
             <a class="navigation-link" href="hotels.html">Гостиницы</a>
+
           </li>
 
         </ul>
 
-        <ul class="navigation-list navigation-user">
-          <li class="navigation-item">
-            <a class="navigation-link" href="#">
-              <span class="visually-hidden">Поиск</span>
+        <ul class="navigation-list navigation-user"> <!--Создаём навигационный лист где пользователь будет взаимодействовать с ним-->
+          <li class="navigation-item"> <!--Взаимодействие поиск-->
+            <a class="navigation-link" href="#"> <!--Поисковик-->
+              <span class="visually-hidden">  <!--Создано для тех кто не видит-->
+                Поиск
+              </span>
+            </a>
 
-            </a>
+
           </li>
-          <li class="navigation-item">
-            <a class="navigation-link" href="#">
-              <span class="visually-hidden">Избранное</span>
+          <li class="navigation-item"> <!--Взаимодействие избранное-->
+            <a class="navigation-link" href="#">  <!--Избранное-->
+              <span class="visually-hidden"> <!--Созданое для тех кто не может-->
+                Избранное
+              </span>
             </a>
+
           </li>
-          <li class="navigation-item">
-            <a class="button button-all" href="#">Хочу сюда!</a>
+          <li class="navigation-item"> <!--Взаимодействие Клик ссылка-->
+            <a class="navigation-button buttol-all" href="#">Хочу сюда!</a> <!--Создаём псевдокнопку на самом деле ссылку-->
           </li>
 
         </ul>
+
       </nav>
 
-
-
-
-
     </header>
-    <main class="main-index">
-      <h1 class="visually-hidden">Седона</h1>
-      <ul class="welcome">
-        <li class="welcom-item">
-          <img class="img-welcome" src="" alt="Приветствие в Седону"> <!--Правильно ли написал alt?-->
-          <img class="img-welcome" src="" alt="to the gargeus"> <!--А можно перевод? ))-->
 
-        </li>
-        <li class="welcome-item">
-          <img class="img-sedona" src="" alt="Седона, самый крутой каньон"> <!--Краткость сестра таланта!-->
+    <main class="main-index">  <!--Создаём основное содержимое страницы-->
 
+      <h1 class="visually-hidden">Город Седона</h1>
+      <section class="hero">
+        <section class="hero">
+          <img class="hero-logo-text" src="" alt=" Логотип сайта" width="458" height="352"> <!--Нужно сгруппировать 3 вектро в svg -->
+          <img class="divider" src="" alt="Делает картинку красивой!" width="1200" height="57"> <!--Идёт разделение -->
+          <h2>Седона-небольшой городок в Аризоне,<br>
+            заслуживающий большего!</h2>
+          <p>Рассмотрим причины, по которым Седона круче, чем Гранд-Каньон!</p>
 
-        </li>
-      </ul>
-      <img class="divider" src="" alt="Делает картинку красивой"> <!--Поправьте если ошибаюсь-->
-
-      <section class="introduction">
-        <h2 class="introduction-title">Седона — небольшой городок в Аризоне,
-          заслуживающий большего!</h2>
-
-        <p class="introduction-description">Рассмотрим причины, по которым Седона круче, чем Гранд-Каньон!</p>
       </section>
 
-      <section class="advantages"> <!--Затруднительное положение. Я думаю что можно сделать через таблицу но сомнительно немного та и навыков не хватает так думаю. Сделаем через ul -->
-        <ul class="advantages-list">
+
+
+
+
+      <section class="advantages"> <!--Создаём секцию преимуществ Седоны-->
+        <h2 class="visually-hidden">Преимущества</h2> <!--Создаём оглавление чтобы повысить качество читаемости-->
+
+        <ul class="advantages-list"> <!--Создаём список преимуществ-->
           <li class="advantages-item">
             <h3 class="advantages-title">Настоящий городок</h3>
-            <br>
+            <br> <!--Черта. В css просто возьмём br. Считаю что не нужно создавать специальный класс.-->
             <p class="advantages-description">Седона — не аттракцион для туристов, там течёт своя жизнь</p>
-          </li>
-          <li class="advantages-item"><img class="advantages-img" src="" alt="Красивый вид на балкон"></li>
-        </ul>
 
+          </li> <!--Создаём список преимуществ-->
+          <li class="advantages-item">
+            <img class="advantages-photo" src="" alt="Красивая картинка здания с листвой" width="800" height="384">
+          </li> <!--Создаём картинку преимуществ-->
+
+        </ul>
 
         <ul class="advantages">
           <li class="advantages-item">
             <h3 class="advantages-title">Небольшая площадь</h3>
-            <br>
+            <br> <!--Черта. В css просто возьмём br. Считаю что не нужно создавать специальный класс.-->
             <p class="advantages-description">Все достопримечательности находятся очень близко</p>
 
+          </li> <!--Создаём список преимуществ-->
 
-          </li>
           <li class="advantages-item">
-            <h3 class="advantages-title">Красивая дорога</h3>
-            <br>
+            <h3 class="advantages-title">Красивая
+              дорога</h3>
+            <br> <!--Черта. В css просто возьмём br. Считаю что не нужно создавать специальный класс.-->
             <p class="advantages-description">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
 
-          </li>
+          </li> <!--Создаём список преимуществ-->
+
           <li class="advantages-item">
-            <h3 class="advantages-title">Мало туристов</h3>
-            <br>
+            <h3 class="advantages-title">Мало
+              туристов</h3>
+            <br> <!--Черта. В css просто возьмём br. Считаю что не нужно создавать специальный класс.-->
             <p class="advantages-description">Большинство едет в Гранд Каньон и толпится там</p>
 
-          </li>
+          </li> <!--Создаём список преимуществ-->
 
         </ul>
-        <ul class="advantages">
-          <li class="advantages-item">
-            <img class="advantages-img" src="" alt="Красивые вид на скалы и леса">
 
-          </li>
+
+
+
+        <ul class="advantages-list"> <!--Создаём список преимуществ-->
+
           <li class="advantages-item">
-            <h3 class="advantages-title">Там есть мост дьявола</h3>
-            <br>
+            <img class="advantages-photo" src="" alt="Красивая картинка гор и дальних деревьев" width="800" height="384">
+          </li> <!--Создаём картинку преимуществ-->
+
+          <li class="advantages-item">
+            <h3 class="advantages-title">Там есть
+              мост дьявола</h3>
+            <br> <!--Черта. В css просто возьмём br. Считаю что не нужно создавать специальный класс.-->
             <p class="advantages-description">Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
 
-          </li>
+          </li> <!--Создаём список преимуществ-->
 
         </ul>
-        <ul class="advantages">
-          <li class="advantages-item">
-            <img class="advantages-img" src="" alt="Нарисован домик">
-            <h3 class="advantages-title">Жильё</h3>
-            <br>
-            <p class="advantages-description">Рекомендуем пожить в настоящем мотеле,
+
+      </section>
+
+
+      <section class="recome"> <!--recome - рекомендации -->
+
+        <ul class="recome-list">
+          <li class="recome-item">
+            <img class="recome-logo" src="" alt="Домик">
+            <h3 class="recome-title">Жильё</h3>
+
+            <p class="recome-description">Рекомендуем пожить в настоящем мотеле,
               всё как в кино!</p>
 
-          </li>
-          <li class="advantages-item">
-            <img class="advantages-img" src="" alt="Нарисован бургер">
-            <h3 class="advantages-title">Еда</h3>
-            <br>
-            <p class="advantages-description">Всегда заказывайте
+          </li> <!--Создаём список преимуществ-->
+
+          <li class="recome-item">
+            <img class="recome-logo" src="" alt="Бургер">
+            <h3 class="recome-title">Еда</h3>
+
+            <p class="recome-description">Всегда заказывайте
               топовый фирменный бургер, вы не разочаруетесь!</p>
 
-          </li>
-          <li class="advantages-item">
-            <img class="advantages-img" src="" alt="Нарисован подарок">
-            <h3 class="advantages-title">Сувениры</h3>
-            <br>
-            <p class="advantages-description">Не только китайского,
+          </li> <!--Создаём список преимуществ-->
+
+          <li class="recome-item">
+            <img class="recome-logo" src="" alt="Подарок">
+            <h3 class="recome-title">Сувениры</h3>
+
+            <p class="recome-description">Не только китайского,
               но и настоящего местного производства!</p>
 
-
-          </li>
-
-        </ul>
-
-
-      </section >
-      <section class="interesting">
-        <ul class="interest">
-          <li class="interest-item">
-            <h3 class="interes-title">Заинтересовались?</h3>
-            <p class="interes-description">Укажите предполагаемые даты поездки,и мы покажем вам лучшие предложения гостиниц в Седоне</p>
-            <a class="button-search button-all" href="#">Поиск гостиницы в седоне</a>
-          </li>
-        </ul>
-      </section>
-
-      <section class="dispatch">
-        <ul class="subscrible">
-          <li class="subscrible-item">
-            <h3 class="subscrible-title">Подпишитесь на рассылку</h3>
-            <p class="subscrible-description">Только полезная информация и никакого спама, честное бойскаутское!</p>
-
-
-            <form class="dispatch-form" action="https://echo.htmlacademy.ru/" method="post">
-              <label for="dispatch-email">Email</label>
-              <input class="field"  placeholder="email@example.com" type="email" name="dispatch-email" id="dispatch-email" required>
-              <button class="button dispatch-button" type="submit">
-                <span class="visually-hidden">Отправить</span>
-              </button>
-            </form>
-
-          </li>
+          </li> <!--Создаём список преимуществ-->
 
         </ul>
-
-
-
 
       </section>
 
 
 
+      <section class="search-hostels"> <!--Создаём секцию по поиску гостиницы заинтересованным лицам-->
 
 
+        <ul class="search-hostels-list"> <!--Создаём список-->
+          <li class="search-hostels-item">
+            <h3 class="search-hostels-title">Заинтересовались?</h3>
+            <p class="search-hostels-discription">Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в Седоне</p>
+            <a class="button-search-hostels button-all" href="#">ПОИСК ГОСТИНИЦЫ В седоне</a> <!--Видимая кнопка для перехода по ссылка в поиск гостиницы-->
+
+          </li>
 
 
+        </ul>
+
+      </section>
+
+      <section class="newsletter">
+        <h2 class="newsletter-title">Подпишитесь на рассылку</h2>
+        <p class="newsletter-description">Только полезная информация и никакого спама, честное бойскаутское!</p>
+        <form class="newsletter-form" action="https://echo.htmlacademy.ru/" method="post">
+            <label for="newsletter-email">Email</label>
+            <input class="field"  placeholder="email@example.com" type="email" name="newsletter-email" id="newsletter-email" required>
+            <button class="button newsletter-button" type="submit"> Подписаться
+
+            </button>
+          </form>
+        </section>
 
     </main>
-
-
     <footer class="page-footer">
       <section class="footer-social">
-        <h2 class="visually-hidden">Социальные контакты</h2>
 
         <ul class="footer-social-list">
           <li class="footer-social-item">
-            <a class="button" href="https://vk.com/htmlacademy">
+            <a class="button" href="#">
               <span class="visually-hidden">Вконтакте</span>
             </a>
           </li>
           <li class="footer-social-item">
-            <a class="button" href="https://t.me/htmlacademy">
+            <a class="button" href="#">
               <span class="visually-hidden">Телеграм</span>
             </a>
           </li>
           <li class="footer-social-item">
-            <a class="button" href="https://www.youtube.com/user/htmlacademyru">
+            <a class="button" href="#">
               <span class="visually-hidden">Ютуб</span>
             </a>
           </li>
         </ul>
-
+        <p class="about-text">Сделано в <a class="htmlacademy-link" href="https://htmlacademy.ru/">.html academy</a></p>
       </section>
 
-      <section class="footer-telephone">
-        <h2 class="visually-hidden">Телефон</h2>
+      <section class="footer-contacts">
         <address class="footer-contacts-address">
-          <a class="footer-contacts-address" href="tel:+78128121212">+7 (812) 812-12-12</a>
+          <a class="footer-contacts-address-phone" href="tel:+78128121212">+7 812 812-12-12</a>
+
         </address>
+
 
       </section>
 
       <section class="footer-logo">
-        <h2 class="visually-hidden">Логотип htmlacademy</h2>
-        <a class="footer-logo-html" href="https://htmlacademy.ru/"> <img src="" alt="Логотип html academy который переносит на главную"></a>
+        <a class="footer-logo" href="#"><img class="footer-logo-html" src="" alt="Фотография htmlacademy"></a>
+
 
       </section>
 
 
     </footer>
 
-
-
   </body>
-
 </html>
