--- a/index.html
+++ b/index.html
@@ -2,202 +2,150 @@
 <html lang="ru">
   <head>
     <meta charset="utf-8">
-    <title>Седона</title> <!--Именование страницы-->
+    <title>Седона</title>
   </head>
 
   <body>
-
-    <header class="page-header"> <!--Именуем шапку-->
+    <header class="page-header">
       <nav class="navigation">
-        <ul class="navigation-list"> <!--Создаём навигацию и именуем её-->
-          <li class="navigation-item"> <!--Создаём навигационный предмет - блок-->
+        <ul class="navigation-list">
+
+          <li class="navigation-item">
             <a class="navigation-link navigation-logo" href="#">
               <img src="#" alt="Логотип Сидоны">
-            </a> <!--Создаём мини блок для логотипа и чтобы клиент мог по инерции переходить на главную-->
-
+            </a>
           </li>
-          <li class="navigation-item"> <!--Создаём мини блоки чтобы клиент понимал функционал-->
+
+          <li class="navigation-item">
             <a class="navigation-link" href="index.html">Главная</a>
-
           </li>
-          <li class="navigation-item"> <!--Создаём мини блоки чтобы клиент понимал функционал-->
+
+          <li class="navigation-item">
             <a class="navigation-link" href="about.html">О Седоне</a>
-
           </li>
-          <li class="navigation-item"> <!--Создаём мини блоки чтобы клиент понимал функционал-->
+
+          <li class="navigation-item">
             <a class="navigation-link" href="hotels.html">Гостиницы</a>
-
           </li>
-
         </ul>
 
-        <ul class="navigation-list navigation-user"> <!--Создаём навигационный лист где пользователь будет взаимодействовать с ним-->
-          <li class="navigation-item"> <!--Взаимодействие поиск-->
-            <a class="navigation-link" href="#"> <!--Поисковик-->
-              <span class="visually-hidden">  <!--Создано для тех кто не видит-->
+        <ul class="navigation-list navigation-user">
+          <li class="navigation-item">
+            <a class="navigation-link" href="#">
+              <span class="visually-hidden">
                 Поиск
               </span>
             </a>
-
-
           </li>
-          <li class="navigation-item"> <!--Взаимодействие избранное-->
-            <a class="navigation-link" href="#">  <!--Избранное-->
-              <span class="visually-hidden"> <!--Созданое для тех кто не может-->
+
+          <li class="navigation-item">
+            <a class="navigation-link" href="#">
+              <span class="visually-hidden">
                 Избранное
               </span>
             </a>
 
           </li>
-          <li class="navigation-item"> <!--Взаимодействие Клик ссылка-->
-            <a class="navigation-button" href="#">Хочу сюда!</a> <!--Создаём псевдокнопку на самом деле ссылку-->
+
+          <li class="navigation-item">
+            <a class="navigation-button button" href="#">Хочу сюда!</a>
           </li>
-
         </ul>
-
       </nav>
 
     </header>
 
-    <main class="main-index">  <!--Создаём основное содержимое страницы-->
-
+    <main class="main-index">
       <h1 class="visually-hidden">Город Седона</h1>
+      <div class="hero">
+        <img class="hero-logo-text" src="" alt=" Логотип сайта" width="458" height="352">
+      </div>
+
       <section class="hero">
-        <img class="hero-logo-text" src="" alt=" Логотип сайта" width="458" height="352"> <!--Нужно сгруппировать 3 вектро в svg -->
-        <ul class="hero-list">
-          <li class="hero-item">
-            <h2 class="hero-title">Седона-небольшой городок в Аризоне,<br>
-            заслуживающий большего!</h2>
-            <p class="hero-description">Рассмотрим причины, по которым Седона круче, чем Гранд-Каньон!</p>
-          </li>
-          <li class="hero-description">
-            <p>Рассмотрим причины, по которым Седона круче, чем Гранд-Каньон!</p>
-          </li>
-        </ul>
-
-
-
-
+        <h2 class="hero-title">Седона-небольшой городок в Аризоне,
+          заслуживающий большего!</h2>
+        <p class="hero-description">Рассмотрим причины, по которым Седона круче, чем Гранд-Каньон!</p>
       </section>
 
-
-
-
-
-      <section class="advantages"> <!--Создаём секцию преимуществ Седоны-->
-        <h2 class="visually-hidden">Преимущества</h2> <!--Создаём оглавление чтобы повысить качество читаемости-->
-
-        <ul class="advantages-list"> <!--Создаём список преимуществ-->
+      <section class="advantages">
+        <h2 class="visually-hidden">Преимущества</h2>
+        <ul class="advantages-list">
           <li class="advantages-item">
             <h3 class="advantages-title">Настоящий городок</h3>
-
             <p class="advantages-description">Седона — не аттракцион для туристов, там течёт своя жизнь</p>
+          </li>
 
-          </li> <!--Создаём список преимуществ-->
           <li class="advantages-item">
             <img class="advantages-photo" src="" alt="Красивая картинка здания с листвой" width="800" height="384">
-          </li> <!--Создаём картинку преимуществ-->
-
+          </li>
         </ul>
 
         <ul class="advantages">
           <li class="advantages-item">
             <h3 class="advantages-title">Небольшая площадь</h3>
-
             <p class="advantages-description">Все достопримечательности находятся очень близко</p>
-
-          </li> <!--Создаём список преимуществ-->
+          </li>
 
           <li class="advantages-item">
             <h3 class="advantages-title">Красивая
               дорога</h3>
-
             <p class="advantages-description">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
-
-          </li> <!--Создаём список преимуществ-->
+          </li>
 
           <li class="advantages-item">
             <h3 class="advantages-title">Мало
               туристов</h3>
-
             <p class="advantages-description">Большинство едет в Гранд Каньон и толпится там</p>
-
-          </li> <!--Создаём список преимуществ-->
+          </li>
 
         </ul>
 
-
-
-
-        <ul class="advantages-list"> <!--Создаём список преимуществ-->
-
+        <ul class="advantages-list">
           <li class="advantages-item">
             <img class="advantages-photo" src="" alt="Красивая картинка гор и дальних деревьев" width="800" height="384">
-          </li> <!--Создаём картинку преимуществ-->
+          </li>
 
           <li class="advantages-item">
             <h3 class="advantages-title">Там есть
               мост дьявола</h3>
-
             <p class="advantages-description">Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
-
-          </li> <!--Создаём список преимуществ-->
-
+          </li>
         </ul>
-
       </section>
 
-
-      <section class="recome"> <!--recome - рекомендации -->
-
-        <ul class="recome-list">
-          <li class="recome-item">
-            <img class="recome-logo" src="" alt="Домик">
-            <h3 class="recome-title">Жильё</h3>
-
-            <p class="recome-description">Рекомендуем пожить в настоящем мотеле,
+      <section class="recommendations">
+        <ul class="recommendations-list">
+          <li class="recommendations-item">
+            <img class="recommendations-logo" src="" alt="Домик">
+            <h3 class="recommendations-title">Жильё</h3>
+            <p class="recommendations-description">Рекомендуем пожить в настоящем мотеле,
               всё как в кино!</p>
+          </li>
 
-          </li> <!--Создаём список преимуществ-->
-
-          <li class="recome-item">
-            <img class="recome-logo" src="" alt="Бургер">
-            <h3 class="recome-title">Еда</h3>
-
-            <p class="recome-description">Всегда заказывайте
+          <li class="recommendations-item">
+            <img class="recommendations-logo" src="" alt="Бургер">
+            <h3 class="recommendations-title">Еда</h3>
+            <p class="recommendations-description">Всегда заказывайте
               топовый фирменный бургер, вы не разочаруетесь!</p>
+          </li>
 
-          </li> <!--Создаём список преимуществ-->
-
-          <li class="recome-item">
-            <img class="recome-logo" src="" alt="Подарок">
-            <h3 class="recome-title">Сувениры</h3>
-
-            <p class="recome-description">Не только китайского,
+          <li class="recommendations-item">
+            <img class="recommendations-logo" src="" alt="Подарок">
+            <h3 class="recommendations-title">Сувениры</h3>
+            <p class="recommendations-description">Не только китайского,
               но и настоящего местного производства!</p>
-
-          </li> <!--Создаём список преимуществ-->
-
+          </li>
         </ul>
-
       </section>
 
-
-
-      <section class="search-hostels"> <!--Создаём секцию по поиску гостиницы заинтересованным лицам-->
-
-
-        <ul class="search-hostels-list"> <!--Создаём список-->
+      <section class="search-hostels">
+        <ul class="search-hostels-list">
           <li class="search-hostels-item">
             <h3 class="search-hostels-title">Заинтересовались?</h3>
             <p class="search-hostels-discription">Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в Седоне</p>
-            <a class="button-search-hostels button-all" href="#">ПОИСК ГОСТИНИЦЫ В седоне</a> <!--Видимая кнопка для перехода по ссылка в поиск гостиницы-->
-
+            <a class="button-search-hostels button-all" href="#">ПОИСК ГОСТИНИЦЫ В седоне</a>
           </li>
-
-
         </ul>
-
       </section>
 
       <section class="newsletter">
@@ -206,29 +154,29 @@
         <form class="newsletter-form" action="https://echo.htmlacademy.ru/" method="post">
             <label for="newsletter-email">Email</label>
             <input class="field"  placeholder="email@example.com" type="email" name="newsletter-email" id="newsletter-email" required>
-            <button class="button newsletter-button" type="submit"> Подписаться
-
+            <button class="newsletter-button" type="submit"> Подписаться
             </button>
           </form>
         </section>
 
     </main>
     <footer class="page-footer">
-      <section class="footer-social">
-
-        <ul class="footer-social-link">
-          <li class="footer-social-item">
-            <a class="button" href="#">
+      <section class="social">
+        <ul class="social-list">
+          <li class="social-item">
+            <a class="social-link " href="#">
               <span class="visually-hidden">Вконтакте</span>
             </a>
           </li>
-          <li class="footer-social-item">
-            <a class="button" href="#">
+
+          <li class="social-item">
+            <a class="social-link" href="#">
               <span class="visually-hidden">Телеграм</span>
             </a>
           </li>
-          <li class="footer-social-item">
-            <a class="button" href="#">
+
+          <li class="social-item">
+            <a class="social-link" href="#">
               <span class="visually-hidden">Ютуб</span>
             </a>
           </li>
@@ -236,23 +184,15 @@
 
       </section>
 
-      <section class="footer-contacts">
-        <address class="footer-contacts-address">
-          <a class="footer-contacts-address-phone" href="tel:+78128121212">+7 812 812-12-12</a>
-
+      <section class="contacts">
+        <address class="contacts-address">
+          <a class="contacts-address-phone" href="tel:+78128121212">+7 812 812-12-12</a>
         </address>
-
-
       </section>
 
       <section class="footer-copyright">
-        <a class="footer-logo" href="#"><img class="footer-logo-html" src="" alt="Фотография htmlacademy"></a>
-
-
+        <a class="copyright-logo" href="#"><img class="logo-html" src="" alt="Фотография htmlacademy"></a>
       </section>
-
-
     </footer>
-
   </body>
 </html>
