Окончательный вариант страницы

--- a/index.html
+++ b/index.html
@@ -100,6 +100,7 @@
             <p class="advantages-description">Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
 
             <ul class="advantages-card">
+
               <li class="advantages-item">
 
               </li>
@@ -116,23 +117,28 @@
         </ul>
 
       <section class="recommendations">
+
         <ul class="recommendations-list">
           <li class="recommendations-item">
-            <img class="recommendations-logo" src="" alt="Домик">
-            <h3 class="recommendations-title">Жильё</h3>
-            <p class="recommendations-description">Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
-          </li>
+            <ul class="recommendations-card">
+              <li class="recommendations-item">
+                <img class="recommendations-logo" src="" alt="Домик">
+                <h3 class="recommendations-title">Жильё</h3>
+                <p class="recommendations-description">Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
+              </li>
 
-          <li class="recommendations-item">
-            <img class="recommendations-logo" src="" alt="Бургер">
-            <h3 class="recommendations-title">Еда</h3>
-            <p class="recommendations-description">Всегда заказывайте топовый фирменный бургер, вы не разочаруетесь!</p>
-          </li>
+              <li class="recommendations-item">
+                <img class="recommendations-logo" src="" alt="Бургер">
+                <h3 class="recommendations-title">Еда</h3>
+                <p class="recommendations-description">Всегда заказывайте топовый фирменный бургер, вы не разочаруетесь!</p>
+              </li>
 
-          <li class="recommendations-item">
-            <img class="recommendations-logo" src="" alt="Подарок">
-            <h3 class="recommendations-title">Сувениры</h3>
-            <p class="recommendations-description">Не только китайского, но и настоящего местного производства!</p>
+              <li class="recommendations-item">
+                <img class="recommendations-logo" src="" alt="Подарок">
+                <h3 class="recommendations-title">Сувениры</h3>
+                <p class="recommendations-description">Не только китайского, но и настоящего местного производства!</p>
+              </li>
+            </ul>
           </li>
         </ul>
       </section>
