--- a/index.html
+++ b/index.html
@@ -37,16 +37,12 @@
           <li class="navigation-item">
             <a class="navigation-link" href="#">
               <span class="visually-hidden">
-                Избранное
+                Избранное 12
               </span>
             </a>
-
-          </li>
-
-          <li class="navigation-item">
-            <a class="navigation-button button" href="#">Хочу сюда!</a>
           </li>
         </ul>
+        <a class="navigation-button button" href="#">Хочу сюда!</a>
       </nav>
 
     </header>
@@ -98,20 +94,17 @@
           <li class="recommendations-item">
             <ul class="recommendations-extra-list">
               <li class="recommendations-extra-item">
-
-                <h3 class="recommendations-title">Жильё</h3>
+                <h4 class="recommendations-title">Жильё</h4>
                 <p class="recommendations-description">Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
               </li>
 
               <li class="recommendations-extra-item">
-
-                <h3 class="recommendations-title">Еда</h3>
+                <h4 class="recommendations-title">Еда</h4>
                 <p class="recommendations-description">Всегда заказывайте топовый фирменный бургер, вы не разочаруетесь!</p>
               </li>
 
               <li class="recommendations-extra-item">
-
-                <h3 class="recommendations-title">Сувениры</h3>
+                <h4 class="recommendations-title">Сувениры</h4>
                 <p class="recommendations-description">Не только китайского, но и настоящего местного производства!</p>
               </li>
             </ul>
@@ -120,7 +113,7 @@
       </section>
 
       <section class="search-hostels" data-test="search">
-        <h3 class="search-hostels-title">Заинтересовались?</h3>
+        <h2 class="search-hostels-title">Заинтересовались?</h2>
         <p class="search-hostels-description">Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в Седоне</p>
         <a class="search-hostels-link button" href="#">Поиск гостиницы в Седоне</a>
       </section>
