--- a/index.html
+++ b/index.html
@@ -44,13 +44,12 @@
         </ul>
         <a class="navigation-button button" href="#">Хочу сюда!</a>
       </nav>
-
     </header>
 
     <main class="main-index" data-test="main">
       <h2 class="visually-hidden">Седона — городок в Аризоне</h2>
       <div class="hero" data-test="hero">
-        <img class="hero-logo-text" src="" alt=" Welcome to the gorgeous Sedona, because the Grand Canyon sucks!" width="458" height="352">
+        <img class="hero-image" src="" alt=" Welcome to the gorgeous Sedona, because the Grand Canyon sucks!" width="458" height="352">
       </div>
 
       <section class="advantages" data-test="advantages">
@@ -92,25 +91,20 @@
 
         <ul class="recommendations-list">
           <li class="recommendations-item">
-            <ul class="recommendations-extra-list">
-              <li class="recommendations-extra-item">
-                <h4 class="recommendations-title">Жильё</h4>
-                <p class="recommendations-description">Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
-              </li>
+            <h4 class="recommendations-title">Жильё</h4>
+            <p class="recommendations-description">Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
+          </li>
 
-              <li class="recommendations-extra-item">
-                <h4 class="recommendations-title">Еда</h4>
-                <p class="recommendations-description">Всегда заказывайте топовый фирменный бургер, вы не разочаруетесь!</p>
-              </li>
+          <li class="recommendations-item">
+            <h4 class="recommendations-title">Еда</h4>
+            <p class="recommendations-description">Всегда заказывайте топовый фирменный бургер, вы не разочаруетесь!</p>
+          </li>
 
-              <li class="recommendations-extra-item">
-                <h4 class="recommendations-title">Сувениры</h4>
-                <p class="recommendations-description">Не только китайского, но и настоящего местного производства!</p>
-              </li>
-            </ul>
+          <li class="recommendations-item">
+            <h4 class="recommendations-title">Сувениры</h4>
+            <p class="recommendations-description">Не только китайского, но и настоящего местного производства!</p>
           </li>
         </ul>
-      </section>
 
       <section class="search-hostels" data-test="search">
         <h2 class="search-hostels-title">Заинтересовались?</h2>
