--- a/index.html
+++ b/index.html
@@ -4,11 +4,10 @@
     <meta charset="utf-8">
     <title>Седона</title>
   </head>
-
   <body>
     <header class="page-header" data-test="header">
       <nav class="navigation">
-        <a class="navigation-link navigation-logo" href="#">
+        <a class="navigation-link navigation-logo" href="index.html">
           <img src="#" alt="Логотип города Седона.">
         </a>
         <ul class="navigation-list">
@@ -86,23 +85,23 @@
             <h3 class="advantages-title">Там есть мост дьявола</h3>
             <p class="advantages-description">Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
             <img class="advantages-photo" src="" alt="Каньон, горы, снова горы." width="800" height="384">
-          </li>
-        </ul>
 
-        <ul class="recommendations-list">
-          <li class="recommendations-item">
-            <h4 class="recommendations-title">Жильё</h4>
-            <p class="recommendations-description">Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
-          </li>
+            <ul class="recommendations-list">
+              <li class="recommendations-item">
+                <h4 class="recommendations-title">Жильё</h4>
+                <p class="recommendations-description">Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
+              </li>
 
-          <li class="recommendations-item">
-            <h4 class="recommendations-title">Еда</h4>
-            <p class="recommendations-description">Всегда заказывайте топовый фирменный бургер, вы не разочаруетесь!</p>
-          </li>
+              <li class="recommendations-item">
+                <h4 class="recommendations-title">Еда</h4>
+                <p class="recommendations-description">Всегда заказывайте топовый фирменный бургер, вы не разочаруетесь!</p>
+              </li>
 
-          <li class="recommendations-item">
-            <h4 class="recommendations-title">Сувениры</h4>
-            <p class="recommendations-description">Не только китайского, но и настоящего местного производства!</p>
+              <li class="recommendations-item">
+                <h4 class="recommendations-title">Сувениры</h4>
+                <p class="recommendations-description">Не только китайского, но и настоящего местного производства!</p>
+              </li>
+            </ul>
           </li>
         </ul>
 
@@ -123,13 +122,12 @@
             </button>
           </form>
         </section>
-
     </main>
     <footer class="page-footer" data-test="footer">
       <section class="social">
         <ul class="social-list">
           <li class="social-item">
-            <a class="social-link " href="#">
+            <a class="social-link" href="#">
               <span class="visually-hidden">Вконтакте</span>
             </a>
           </li>
@@ -146,7 +144,6 @@
             </a>
           </li>
         </ul>
-
       </section>
 
       <section class="contacts">
