--- a/catalog.html
+++ b/catalog.html
@@ -48,24 +48,21 @@
     <main class="main-inner" data-test="catalog">
       <header class="inner-header">
         <h1 class="inner-header-title">Гостиницы Седоны</h1>
-        <ol class="inner-header-list">
-          <li class="inner-header-item">
-            <a class="inner-header-image-item" href="#">
+        <ul class="bread-cumbs-list">
+          <li class="bread-cumbs-item">
+            <a class="bread-cumbs-item" href="#">
               <span class="visually-hidden">Главная</span>
             </a>
           </li>
 
           <li>
-            <a class="filter-hostels" href="#">Гостиницы</a>
+            <a class="bread-cumbs-hostels" href="#">Гостиницы</a>
           </li>
-        </ol>
-
+        </ul>
       </header>
       <section class="filter-content" data-test=" filter">
         <h1 class="visually-hidden">Фильтры</h1>
-
         <form class="catalog-filter" action="https://echo.htmlacademy.ru/" method="get">
-
           <fieldset class="catalog-filter-group">
               <legend class="catalog-filter-title">Инфраструктура:</legend>
               <ul class="catalog-filter-list">
@@ -74,7 +71,6 @@
                     <input class="control-input" type="checkbox" name="swimming-pool" checked>
                     Бассейн
                   </label>
-
                 </li>
 
                 <li class="catalog-filter-item">
@@ -82,7 +78,6 @@
                     <input class="control-input" type="checkbox" name="parking" checked>
                     Парковка
                   </label>
-
                 </li>
 
                 <li class="catalog-filter-item">
@@ -90,9 +85,7 @@
                     <input class="control-input" type="checkbox" name="wi_fi">
                     Wi-Fi
                   </label>
-
                 </li>
-
               </ul>
             </fieldset>
 
@@ -104,8 +97,6 @@
                     <input class="control-input" type="radio" name="product-group" value="hostels" checked>
                     Гостиница
                   </label>
-
-
                 </li>
 
                 <li class="catalog-filter-item">
@@ -113,7 +104,6 @@
                     <input class="control-input" type="radio" name="product-group" value="motel">
                     Мотель
                   </label>
-
                 </li>
 
                 <li class="catalog-filter-item">
@@ -121,12 +111,10 @@
                     <input class="control-input" type="radio" name="product-group" value="appartament">
                     Апартаменты
                   </label>
-
                 </li>
-
               </ul>
-
             </fieldset>
+
             <fieldset class="catalog-filter-group-right">
               <legend class="catalog-filter-title">Стоимость, ₽:</legend>
               <label class="catalog-filter-group-price">
@@ -135,45 +123,34 @@
                 До
                 <input class="group-price-item" type="text" name="catalog-price-maximum" placeholder="9000">
               </label>
-              <button class="button button-price-minimum" type="submit">Управление нижней границей стоимости</button>
-              <button class="button button-price-maximum" type="submit">Управление верхней границей стоимости</button>
-
-
+              <button class="button button-price" type="button">Управление нижней границей стоимости</button>
+              <button class="button button-price" type="button">Управление верхней границей стоимости</button>
             </fieldset>
             <button class="button button-apply" type="submit">Применить</button>
-            <button class="button button-reset" type="submit">Сбросить</button>
-
-
-
-
-
-
+            <button class="button button-reset" type="reset">Сбросить</button>
         </form>
-
-
-
       </section>
 
       <section class="catalog" data-test="catalog">
-        <h1 class="sorting-search">Найдено гостиниц: 38</h1>
-        <select class="select-control" aria-label="Сортировка">
+        <h2 class="sorting-search">Найдено гостиниц: 38</h2>
+        <select class="sorting-control" aria-label="Сортировка">
           <option value="popular">Сначала популярное</option>
           <option value="cheap">Сначала дешёвое</option>
           <option value="expensive">Сначала дорогое</option>
         </select>
-        <ul class="sorting-list">
-          <li class="sorting-item">
+        <ul class="display-catalog-list">
+          <li class="display-catalog-item">
             <a class="button button-light" href="#">
               <span class="visually-hidden">Показать плиткой</span>
             </a>
           </li>
-          <li class="sorting-item">
+          <li class="display-catalog-item">
             <a href="#" class="button button-light">
               <span class="visually-hidden">Показать карточками</span>
             </a>
           </li>
 
-          <li class="sorting-item">
+          <li class="display-catalog-item">
             <a class="button button-light" href="#">
               <span class="visually-hidden">Показать списком</span>
             </a>
@@ -185,71 +162,77 @@
         <li class="product-card">
           <a class="product-card-link" href="product.html">
             <img class="product-card-image" src="" alt="Звёздное небо в расщелине гор.">
+          </a>
+          <a class="product-card-link" href="product.html">
             <h3 class="product-card-title">Amara Resort & Spa</h3>
           </a>
           <div class="product-card-item">
             <span class="product-card-description">Гостиница</span>
             <span class="product-price-description">От 4000 ₽</span>
-            <a class="button information-button">Подробнее</a>
-            <button class="button favourite-button">В избранное</button>
-            <p class="rating">
+            <a class="button product-card-info-link" href="#">Подробнее</a>
+            <button class="button product-card-favourite-button" type="button">В избранное</button>
+            <p class="product-card-rating">
               <span class="visually-hidden">4 звезды</span>
             </p>
-            <a class="button button-rating">Рейтинг: 8,5</a>
+            <p class="product-card-rating-description">Рейтинг: 8,5</p>
           </div>
         </li>
+
         <li class="product-card">
-          <a class="product-card-link" href="#">
+          <a class="product-card-link" href="product.html">
             <img class="product-card-image" src="" alt="Радуга над горным хребтом.">
+          </a>
+          <a class="product-card-link" href="#">
             <h3 class="product-card-title">Villas at Poco Diablo</h3>
           </a>
           <div class="product-card-item">
             <span class="product-card-description">Гостиница</span>
             <span class="product-price-description">От 5000 ₽</span>
-            <a class="button information-button">Подробнее</a>
-            <button class="button favourite-button">В избранное</button>
+            <a class="button product-card-info-link" href="#">Подробнее</a>
+            <button class="button product-card-favourite-button" type="button">В избранное</button>
             <p class="rating">
               <span class="visually-hidden">4 звезды</span>
             </p>
-            <a class="button button-rating">Рейтинг: 9,2</a>
+            <p class="product-card-rating-description">Рейтинг: 9,2</p>
           </div>
         </li>
+
         <li class="product-card">
-          <a class="product-card-link" href="#">
+          <a class="product-card-link" href="product.html">
             <img class="product-card-image" src="" alt="Горы на фоне голубого неба.">
+          </a>
+          <a class="product-card-link" href="#">
             <h3 class="product-card-title">Desert Quail Inn</h3>
           </a>
           <div class="product-card-item">
             <span class="product-card-description">Гостиница</span>
             <span class="product-price-description">От 2500 ₽</span>
-            <a class="button information-button">Подробнее</a>
-            <button class="button favourite-button">В избранное</button>
+            <a class="button product-card-info-link" href="#">Подробнее</a>
+            <button class="button product-card-favourite-button" type="button">В избранное</button>
             <p class="rating">
               <span class="visually-hidden">3 звезды</span>
             </p>
-            <a class="button button-rating">Рейтинг: 6,9</a>
+            <p class="product-card-rating-description">Рейтинг: 6,9</p>
           </div>
-      </ul>
 
-      <ul class="product-list">
-        <li class="product-card">
-          <a class="product-card-link" href="product.html">
-            <img class="product-card-image" src="" alt="Гора на фоне звёздного неба.">
-            <h3 class="product-card-title">GreenTree Inn</h3>
-          </a>
-          <div class="product-card-item">
-            <span class="product-card-description">Гостиница</span>
-            <span class="product-price-description">От 1500 ₽</span>
-            <a class="button information-button">Подробнее</a>
-            <button class="button favourite-button">В избранное</button>
-            <p class="rating">
-              <span class="visually-hidden">2 звезды</span>
-            </p>
-            <a class="button button-rating">Рейтинг: 5,0</a>
-          </div>
-        </li>
+          <li class="product-card">
+            <a class="product-card-link" href="product.html">
+              <img class="product-card-image" src="" alt="Гора на фоне звёздного неба.">
+            </a>
+            <a class="product-card-link" href="product.html">
+              <h3 class="product-card-title">GreenTree Inn</h3>
+            </a>
+            <div class="product-card-item">
+              <span class="product-card-description">Гостиница</span>
+              <span class="product-price-description">От 1500 ₽</span>
+              <a class="button product-card-info-link" href="#">Подробнее</a>
+              <button class="button product-card-favourite-button" type="button">В избранное</button>
+              <p class="rating">
+                <span class="visually-hidden">2 звезды</span>
+              </p>
+              <p class="product-card-rating-description">Рейтинг: 5,0</p>
+            </div>
       </ul>
-
 
       <ul class="pagination">
         <li class="pagination-item">
@@ -272,31 +255,23 @@
         </li>
       </ul>
 
-
-
-
-
       <section class="newsletter" data-test="subscribe">
         <h2 class="newsletter-title">Подпишитесь на рассылку</h2>
         <p class="newsletter-description">Только полезная информация и никакого спама, честное бойскаутское!</p>
         <form class="newsletter-form" action="https://echo.htmlacademy.ru/" method="post">
             <label for="newsletter-email">Ваш e-mail</label>
             <input class="field"  placeholder="Ваш e-mail" type="email" name="newsletter-email" id="newsletter-email" required>
-            <br>
-            <br><button class="newsletter-button" type="submit"> Подписаться
+            <button class="newsletter-button" type="submit"> Подписаться
             </button>
           </form>
         </section>
-
-
-
-
     </main>
+
     <footer class="page-footer" data-test="footer">
       <section class="social">
         <ul class="social-list">
           <li class="social-item">
-            <a class="social-link " href="#">
+            <a class="social-link" href="#">
               <span class="visually-hidden">Вконтакте</span>
             </a>
           </li>
@@ -313,7 +288,6 @@
             </a>
           </li>
         </ul>
-
       </section>
 
       <section class="contacts">
