--- a/index.html
+++ b/index.html
@@ -56,7 +56,6 @@
         <p class="advantages-title">Седона — небольшой городок в Аризоне,
           заслуживающий большего!</p>
         <p class="advantages-description">Рассмотрим причины, по которым Седона круче, чем Гранд-Каньон!</p>
-
         <ul class="advantages-list">
           <li class="advantages-item">
             <h3 class="advantages-title">Настоящий городок</h3>
@@ -117,8 +116,7 @@
         <form class="newsletter-form" action="https://echo.htmlacademy.ru/" method="post">
             <label for="newsletter-email">Ваш e-mail</label>
             <input class="field"  placeholder="Ваш e-mail" type="email" name="newsletter-email" id="newsletter-email" required>
-            <br>
-            <br><button class="newsletter-button" type="submit"> Подписаться
+            <button class="newsletter-button" type="submit"> Подписаться
             </button>
           </form>
         </section>
