:heavy_check_mark: Сборка #4

--- a/4/catalog.html
+++ b/4/catalog.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Каталог</title>
+    <link rel="stylesheet" href="styles/styles.css">
     <base href="https://htmlacademy-htmlcss.github.io/2056791-sedona-35/4/">
 </head>
   <body>
@@ -57,7 +58,7 @@
           </li>
 
           <li>
-            <a class="breadcrumbs-hostels" href="#">Гостиницы</a>
+            <a class="breadcrumbs-link" href="#">Гостиницы</a>
           </li>
         </ul>
       </header>
@@ -249,10 +250,10 @@
           <a class="pagination-link" href="#">4</a>
         </li>
         <li class="pagination-item">
-          <a class="pagination-link">...</a>
+          <a class="pagination-link pagination-points">...</a>
         </li>
         <li class="pagination-item">
-          <a class="pagination-link" href="#">5</a>
+          <a class="pagination-link" href="#">10</a>
         </li>
       </ul>
 
